# OpenTLD

./: .gitignore  AUTHORS  CMakeLists.txt  OpenTLDConfig.cmake.in  README  README.MAC  README.md  compile.m  cpp_call_graph.dot  initcamera.m  parameters.yml  processframe.dot  run_TLD.m  tld.desktop.in
_input/: init.txt
_output/: tld.txt
bbox/: bb_burn.m  bb_center.m  bb_click.m  bb_click_move.m  bb_cluster.m  bb_cluster_confidence.m  bb_correct.m  bb_distance.m  bb_draw.m  bb_get_similar.m  bb_height.m  bb_hull.m  bb_isdef.m  bb_isin.m  bb_isout.m  bb_normalize.m  bb_points.m  bb_predict.m  bb_rescale_absolute.m  bb_rescale_relative.m  bb_scale.m  bb_scan.m  bb_shift_absolute.m  bb_shift_relative.m  bb_size.m  bb_square.m  bb_width.m
conf/: config-sample.cfg
datasets/: evaluate_all_visual.sh  evaluate_vis.py  minbox.py  run_experiments.sh
datasets/01_david/: david.mpg  gt.txt  init.txt  pn_tracker.txt
datasets/02_jumping/: gt.txt  init.txt  jumping.mpg  pn_tracker.txt
datasets/03_pedestrian1/: TLD1.0.txt  gt.txt  init.txt  pedestrian1.mpg  pn_tracker.txt
datasets/04_pedestrian2/: BeyondSemiBoost.txt  CVPR.txt  MIL.original.txt  MIL.txt  OnlineBoost.txt  SemiBoost.txt  TLD1.0.txt  coGD.original.txt  coGD.txt  final_detector.txt  gt.txt  init.txt  initial_detector.txt  pedestrian2.mpg  pn_tracker.txt
datasets/05_pedestrian3/: BeyondSemiBoost.txt  CVPR.txt  MIL.original.txt  MIL.txt  OnlineBoost.txt  SemiBoost.txt  TLD1.0.txt  coGD.original.txt  coGD.txt  final_detector.txt  gt.txt  init.txt  initial_detector.txt  pedestrian3.mpg  pn_tracker.txt
datasets/06_car/: BeyondSemiBoost.txt  CVPR.txt  MIL.original.txt  MIL.txt  OnlineBoost.txt  SemiBoost.txt  TLD1.0.txt  car.mpg  coGD.original.txt  coGD.txt  final_detector.txt  gt.txt  init.txt  initial_detector.txt  pn_tracker.txt
datasets/07_motocross/: BeyondSemiBoost.txt  CVPR.txt  MIL.original.txt  MIL.txt  OnlineBoost.txt  SemiBoost.txt  TLD1.0.txt  bounding_boxes.txt  coGD.txt  gt.txt  init.txt  initial_detector.txt
datasets/08_volkswagen/: BeyondSemiBoost.txt  CVPR.txt  MIL.original.txt  (+8 more)
debian/: changelog  control  copyright  opentld.1  opentld.install  opentld.manpages  rules
doc/: grapher.py
img/: cam_record.m  cam_wait.m  gt_create.m  gt_display.m  img_alloc.m  img_any2any.m  img_blur.m  img_dir.m  img_get.m  img_merge_frames.m  img_patch.m
include/: FerNNClassifier.h  LKTracker.h  TLD.h  libconfig.h  libconfig.h++  tld_utils.h
lib/: cv200.lib  cvblobslib.lib  cxcore200.lib  highgui200.lib  libconfig++.lib
mex/: bb_overlap.cpp  distance.cpp  fern.cpp  ii.cpp  ii2.cpp  linkagemex.cpp  lk.backup.cpp  lk.cpp  tld.cpp  tld.h  vs2008.sln  vs2008.vcproj  warp.cpp
other/: VisualStudio.sln  init_workspace.m  run_TLD_demo.m  stabilize.m  usbclear.m  usbinit.m
res/: README  StyleGuide.md  manpage.pod  opentld.desktop  rcs.qrc
src/: CMakeLists.txt  FerNNClassifier.cpp  LKTracker.cpp  Main.cpp  Main.h  OpenTLD.cpp  TLD.cpp  config.cpp  config.h  export.cpp  export.h  gui.cpp  gui.h  run_tld.cpp  settings.cpp  settings.h  tld_utils.cpp
src/config/: CMakeLists.txt  libconfig.h++  libconfigcpp.c++  libconfigcpp.cc  scanner.l
src/cvblobs/: BlobContour.h  BlobLibraryConfiguration.h  BlobOperators.cpp  BlobOperators.h  BlobProperties.cpp  BlobResult.cpp  BlobResult.h  CMakeLists.txt  ComponentLabeling.cpp  blob.cpp  blob.h
src/imacq/: CMakeLists.txt  imAcq.cpp  imAcq.h
src/libopentld/: CMakeLists.txt
src/libopentld/imacq/: ImAcq.cpp  ImAcq.h
src/libopentld/mftracker/: BB.cpp  BB.h  BBPredict.cpp  BBPredict.h  FBTrack.cpp  FBTrack.h  Lk.cpp  Lk.h  Median.cpp  Median.h  bb.cpp  bb.h  bb_predict.h  median.cpp
src/libopentld/tld/: Clustering.cpp  Clustering.h  DetectionResult.cpp  DetectionResult.h  DetectorCascade.cpp  DetectorCascade.h  EnsembleClassifier.cpp  EnsembleClassifier.h  ForegroundDetector.cpp  ForegroundDetector.h  IntegralImage.h  MedianFlowTracker.cpp  MedianFlowTracker.h  NNClassifier.cpp  NNClassifier.h  NormalizedPatch.h  TLD.cpp  TLD.h  TLDUtil.cpp  TLDUtil.h  VarianceFilter.cpp  VarianceFilter.h
src/main/: CMakeLists.txt  Main.cpp  Main.h  config.cpp  config.h  export.cpp  gui.cpp  qtconfiggui.cpp  qtconfiggui.h  qtconfiggui.ui  settings.cpp  settings.h
src/mftracker/: CMakeLists.txt  Makefile  bb.h  fbtrack.cpp  lk.cpp
src/opentld/: CMakeLists.txt  OpenTLD.cpp  QOpenTLD.cpp
src/opentld/main/: Config.cpp  Config.h  Gui.cpp  Gui.h  Main.cpp  Main.h  Settings.cpp  Settings.h  gui.h  settings.cpp  settings.h
src/opentld/qopentld/: ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui
src/qopentld/: qtconfiggui.h
src/tld/: CMakeLists.txt  Clustering.cpp  Clustering.h  DetectionResult.cpp  DetectionResult.h  DetectorCascade.cpp  DetectorCascade.h  EnsembleClassifier.cpp  EnsembleClassifier.h  ForegroundDetector.cpp  ForegroundDetector.h  IntegralImage.h  MedianFlowTracker.cpp  MedianFlowTracker.h  NNClassifier.cpp  NNClassifier.h  NormalizedPatch.h  TLD.cpp  TLD.h  TLDUtil.cpp  TLDUtil.h  VarianceFilter.cpp  VarianceFilter.h
src/tld/tracker/: bb.cpp  bb.h  bb_predict.cpp  bb_predict.h  fbtrack.cpp  fbtrack.h  lk.cpp  lk.h  median.cpp  median.h
test/: test_bb_scan.m  test_bbox_shift_overlap.m  test_display_layers.m  test_face_detector.m  test_featureGenerata.m  test_getPatch.m  test_tmdPatch2Pattern.m  test_webcam.m
tld/: cluster.m  cluster_oct.m  tldDemo.m  tldDetection.m  tldDisplay.m  tldExample.m  tldGenerateAprioriData.m  tldGenerateFeatures.m  tldGenerateNegativeData.m  tldGeneratePositiveData.m  tldGeneratePositiveData_single_bbox.m  tldGetPattern.m  tldGetPattern_fast.m  tldInit.m  tldInitDetector.m  tldInitFirstFrame.m  tldInitSource.m  tldLearning.m  tldLoadAprioriImages.m  tldMinMaxVar.m  tldNN.m  tldPatch2Pattern.m  tldProcessFrame.m  tldSaveImages.m  tldSplitNegativeData.m  tldTrack.m  tldTrack_occlusion.2.m  tldTrack_occlusion.m  tldTracking.m  tldTrainNN.m  tldUpdateDetector.m  tldUpdateDetectorConservative.m
utils/: idx2id.m  mat2img.m  maximize.m  median2.m  n2s.m  ntuples.m  pseudorandom_indexes.m  randvalues.m  repcel.m  uniquecount.m  vnormp.m
(+53 files in other folders)
